# luffacrypto

./: .gitignore  Cargo.toml  gen_kotlin.sh  gen_swift.sh
src/: LuffacryptoFFI.h  aes_en.rs  des_en.rs  ecc.rs  keys.rs  lib.rs  luffaCrypto.swift  luffaCryptoFFI.h  luffaCryptoFFI.modulemap  luffa_crypto.udl  main.rs  mod.rs  uniffi-bindgen.rs
src/avatar_nickname/: avatar.rs
src/uniffi/Luffacrypto/: Luffacrypto.kt
src/uniffi/luffaCrypto/: luffaCrypto.kt
