[package]
name = "luffacrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "luffacrypto"
crate-type = [ "staticlib", "cdylib","lib" ]


[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
hex = "0.4.2"
des = "0.8.1"
rand = "0.8.4"
identicon = "0.2.1"
calamine = "0.19.1"
image = "0.24.0"
bytes = "1.1.0"
once_cell = "1.8.0"
uniffi = { version = "0.23.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }


[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]




[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "./src/uniffi-bindgen.rs"
